@@ -30,7 +30,6 @@
 /iapp.h/1.5/Thu Feb 23 04:19:17 2006//
 /ieee802_11_auth.h/1.9/Fri Mar 17 19:26:24 2006//
 /ieee802_1x.h/1.31/Fri Feb 24 04:41:13 2006//
-/includes.h/1.3/Sun Jan  1 19:48:44 2006//
 /madwifi.conf/1.3/Mon Oct 10 04:07:12 2005//
 /milenage.c/1.1/Sun Feb 19 02:53:05 2006//
 /milenage.h/1.1/Sun Feb 19 02:53:05 2006//
@@ -69,10 +68,8 @@ D/logwatch////
 /ieee802_11_auth.c/1.32/Thu Jul 27 22:43:44 2006//
 /pmksa_cache.c/1.8/Thu Jul 27 22:43:44 2006//
 /pmksa_cache.h/1.6/Thu Jul 27 22:43:44 2006//
-/preauth.c/1.8/Thu Jul 27 22:43:44 2006//
 /sha256.c/1.1/Wed May 24 03:32:55 2006//
 /sha256.h/1.1/Wed May 24 03:32:55 2006//
-/ChangeLog/1.145/Sat Sep  9 16:32:28 2006//
 /Makefile/1.93/Result of merge//
 /README/1.16/Sat Sep  9 16:32:28 2006//
 /aes.c/1.9/Sat Sep  9 16:32:28 2006//
@@ -82,16 +79,12 @@ D/logwatch////
 /ap_list.c/1.2/Sat Sep  9 16:32:28 2006//
 /ap_list.h/1.2/Sat Sep  9 16:32:28 2006//
 /beacon.c/1.10/Sat Sep  9 16:32:28 2006//
-/build_config.h/1.4/Sat Sep  9 16:32:28 2006//
-/common.c/1.44/Sat Sep  9 16:32:28 2006//
-/common.h/1.61/Sat Sep  9 16:32:28 2006//
 /config.c/1.79/Sat Sep  9 16:32:28 2006//
 /config.h/1.66/Sat Sep  9 16:32:28 2006//
 /ctrl_iface.c/1.15/Sat Sep  9 16:32:28 2006//
 /des.c/1.2/Tue Sep  5 04:03:21 2006//
 /driver.c/1.43/Sat Sep  9 16:32:28 2006//
 /driver.h/1.31/Sat Sep  9 16:32:28 2006//
-/driver_bsd.c/1.30/Sat Sep  9 16:32:28 2006//
 /driver_devicescape.c/1.20/Sat Sep  9 16:32:28 2006//
 /driver_madwifi.c/1.48/Sat Sep  9 16:32:28 2006//
 /driver_prism54.c/1.23/Sat Sep  9 16:32:28 2006//
@@ -101,7 +94,6 @@ D/logwatch////
 /eap_sim_db.c/1.20/Sat Sep  9 16:32:28 2006//
 /eap_ttls.c/1.19/Sat Sep  9 16:32:28 2006//
 /eloop.c/1.32/Sat Sep  9 16:32:28 2006//
-/eloop_win.c/1.18/Sat Sep  9 16:32:28 2006//
 /hlr_auc_gw.c/1.6/Sat Sep  9 16:32:28 2006//
 /hostapd.8/1.2/Sat Sep  9 16:32:28 2006//
 /hostapd.c/1.165/Sat Sep  9 16:32:28 2006//
@@ -114,11 +106,8 @@ D/logwatch////
 /md5.h/1.9/Sat Sep  9 16:32:29 2006//
 /mlme.c/1.1/Sat Sep  9 00:57:11 2006//
 /mlme.h/1.1/Sat Sep  9 00:57:11 2006//
-/os.h/1.13/Sat Sep  9 16:32:29 2006//
-/os_internal.c/1.3/Sat Sep  9 02:42:02 2006//
 /os_none.c/1.13/Sat Sep  9 16:32:29 2006//
 /os_unix.c/1.14/Sat Sep  9 16:32:29 2006//
-/os_win32.c/1.16/Sat Sep  9 16:32:29 2006//
 /radius.c/1.41/Sat Sep  9 16:32:29 2006//
 /radius_client.c/1.32/Sat Sep  9 16:32:29 2006//
 /radius_server.c/1.16/Sat Sep  9 16:32:29 2006//
@@ -127,5 +116,16 @@ D/logwatch////
 /sta_info.c/1.47/Sat Sep  9 16:32:29 2006//
 /wme.c/1.3/Sat Sep  9 16:32:29 2006//
 /wme.h/1.2/Sat Sep  9 16:32:29 2006//
-/wpa.c/1.143/Sat Sep  9 16:32:29 2006//
-/wpa.h/1.50/Sat Sep  9 16:32:29 2006//
+/ChangeLog/1.146/Wed Sep 13 12:46:00 2006//
+/build_config.h/1.5/Wed Sep 13 12:46:00 2006//
+/common.c/1.46/Wed Sep 13 12:46:00 2006//
+/common.h/1.65/Wed Sep 13 12:46:00 2006//
+/driver_bsd.c/1.31/Wed Sep 13 12:46:00 2006//
+/eloop_win.c/1.20/Wed Sep 13 12:46:00 2006//
+/includes.h/1.4/Wed Sep 13 12:46:00 2006//
+/os.h/1.17/Wed Sep 13 12:46:00 2006//
+/os_internal.c/1.4/Wed Sep 13 12:46:00 2006//
+/os_win32.c/1.17/Wed Sep 13 12:46:00 2006//
+/preauth.c/1.9/Wed Sep 13 12:46:00 2006//
+/wpa.c/1.144/Wed Sep 13 12:46:00 2006//
+/wpa.h/1.51/Wed Sep 13 12:46:01 2006//
